# HighFreqTrader

./: .gitignore  HighFreqTraderSolution.sln  README.md  build.py  run.py
api/: HighFreqTrader.csproj  HighFreqTrader.http  Program.cs
api/Controllers/: TradingController.cs
api/Models/: OrderDto.cs
api/Services/: WebSocketEngine.cs
engine/: CMakeLists.txt
engine/src/: WebSocketServer.cpp
order-generator/: Program.cs
tests/DotNetTests/: DotNetTests.csproj  TradingControllerTests.cs
